# gpx2gac

./: .gitignore  CLAUDE.md  README.md  gpx2gac.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: security.yml  tag-on-merge.yml
docs/: gac-format.md
tests/: test_gpx2gac.py
